--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@astrojs/netlify": "^6.6.0",
-    "astro": "^5.15.5"
+    "algoliasearch": "^5.43.0",
+    "astro": "^5.15.5",
+    "front-matter": "^4.0.2",
+    "gray-matter": "^4.0.3",
+    "marked": "^17.0.0",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@netlify/plugin-visual-editor": "^1.4.1",
