--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@astrojs/netlify": "^6.6.0",
-    "algoliasearch": "^5.43.0",
+    "algoliasearch": "4.25.3",
     "astro": "^5.15.5",
     "front-matter": "^4.0.2",
     "gray-matter": "^4.0.3",
